Update agenda terminology in index.html and translations; replace "Agenda" with "Tasks & Assignments" for improved clarity and consistency across the application.

--- a/resume/index.html
+++ b/resume/index.html
@@ -74,7 +74,7 @@
                     <li role="none"><a href="#experience" class="nav__link" data-i18n-key="nav.experience" role="menuitem">Experience</a></li>
                     <li role="none"><a href="#skills" class="nav__link" data-i18n-key="nav.skills" role="menuitem">Skills</a></li>
                     <li role="none"><a href="#projects" class="nav__link" data-i18n-key="nav.projects" role="menuitem">Projects</a></li>
-                    <li role="none"><a href="#agenda" class="nav__link" data-i18n-key="nav.agenda" role="menuitem">Agenda</a></li>
+                    <li role="none"><a href="#agenda" class="nav__link" data-i18n-key="nav.agenda" role="menuitem">Tasks & Assignments</a></li>
                     <li role="none"><a href="#contact" class="nav__link" data-i18n-key="nav.contact" role="menuitem">Contact</a></li>
                 </ul>
                 <div class="nav__actions">
@@ -728,7 +728,7 @@
     <!-- Applications Section -->
     <section class="agenda" id="agenda">
         <div class="container">
-            <h2 class="section__title" data-i18n-key="section.agenda">Agenda</h2>
+            <h2 class="section__title" data-i18n-key="section.agenda">Tasks & Assignments</h2>
             <div class="agenda__grid">
                 <div class="agenda__list">
                     <h3 data-i18n-key="agenda.applicationsProgress">Tasks and Assignments</h3>
