Refactor index.html and README.md to streamline project listings; remove outdated projects, enhance descriptions, and improve overall clarity and presentation.

--- a/index.html
+++ b/index.html
@@ -430,39 +430,32 @@
         </section>
 
         <section id="projects" class="mb-16">
-            <h2 class="text-3xl font-bold text-center text-[#005F73] mb-8">Top 6 GitHub Open Source Projects</h2>
+            <h2 class="text-3xl font-bold text-center text-[#005F73] mb-8">Top GitHub Open Source Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="bg-white rounded-xl shadow-lg p-6 md:col-span-2">
                     <p class="text-slate-600">Highlighting contributions across core Java frameworks, financial integration, and applied AI/ML in high-performance contexts (GitHub: codesapienbe).</p>
                 </div>
 
                 <div class="bg-white rounded-xl shadow-lg p-6 project-card-border" style="border-left-color: #005F73;">
-                    <h4 class="text-lg font-semibold text-[#005F73]">1. Spring Vision Framework 👁️</h4>
+                    <h4 class="text-lg font-semibold text-[#005F73]">Spring Vision Framework 👁️</h4>
                     <p class="text-sm font-medium text-[#0A9396] mb-2">Technologies: Spring Boot 3.x, Java 21, OpenCV | <a href="https://github.com/codesapienbe/spring-vision" target="_blank" class="text-[#EE9B00] hover:text-[#CA6702]">GitHub Link</a></p>
                     <p class="text-slate-600 text-sm">A production-ready computer vision framework delivered as a <strong>Spring Boot Starter</strong>, enabling zero-configuration object detection, face analysis, and intelligent applications with enterprise security and high-performance pluggable backends.</p>
                 </div>
-                <div class="bg-white rounded-xl shadow-lg p-6 project-card-border" style="border-left-color: #0A9396;">
-                    <h4 class="text-lg font-semibold text-[#005F73]">2. Spring Finqube ISO 20022 Starter 💰</h4>
-                    <p class="text-sm font-medium text-[#0A9396] mb-2">Technologies: Spring Boot 3.2, Financial Integration | <a href="https://github.com/codesapienbe/spring-finqube" target="_blank" class="text-[#EE9B00] hover:text-[#CA6702]">GitHub Link</a></p>
-                    <p class="text-slate-600 text-sm">Developed a production-ready Spring Boot starter for **financial messaging** (ISO 20022 standard), featuring enterprise-grade security, auto-configuration, and a pluggable transport protocol pipeline.</p>
-                </div>
-                <div class="bg-white rounded-xl shadow-lg p-6 project-card-border" style="border-left-color: #94D2BD;">
-                    <h4 class="text-lg font-semibold text-[#005F73]">3. Food Score MLOps Pipeline 📊</h4>
-                    <p class="text-sm font-medium text-[#0A9396] mb-2">Technologies: Spring Boot, PostgreSQL, OpenAPI | <a href="https://github.com/codesapienbe/food-score" target="_blank" class="text-[#EE9B00] hover:text-[#CA6702]">GitHub Link</a></p>
-                    <p class="text-slate-600 text-sm">Architected a complete enterprise application with structured JSON logging and <strong>OpenAPI</strong> documentation, demonstrating a full-cycle <strong>MLOps</strong> pipeline integration.</p>
-                </div>
+
                 <div class="bg-white rounded-xl shadow-lg p-6 project-card-border" style="border-left-color: #EE9B00;">
-                    <h4 class="text-lg font-semibold text-[#005F73]">4. Instyper - Voice-to-Text Desktop App 🎙️</h4>
+                    <h4 class="text-lg font-semibold text-[#005F73]">Instyper - Voice-to-Text Desktop App 🎙️</h4>
                     <p class="text-sm font-medium text-[#0A9396] mb-2">Technologies: Java, Vosk, Whisper, GUI | <a href="https://github.com/codesapienbe/Instyper" target="_blank" class="text-[#EE9B00] hover:text-[#CA6702]">GitHub Link</a></p>
                     <p class="text-slate-600 text-sm">A lightweight, privacy-first desktop application that turns your voice into text instantly. It works offline (Vosk) and supports modern online models (Whisper) and live translation.</p>
                 </div>
+
                 <div class="bg-white rounded-xl shadow-lg p-6 project-card-border" style="border-left-color: #CA6702;">
-                    <h4 class="text-lg font-semibold text-[#005F73]">5. Stegnocchi - EXIF Steganography App 🖼️</h4>
+                    <h4 class="text-lg font-semibold text-[#005F73]">Stegnocchi - EXIF Steganography App 🖼️</h4>
                     <p class="text-sm font-medium text-[#0A9396] mb-2">Technologies: Core Java, Image Processing, Security | <a href="https://github.com/codesapienbe/Stegnocchi" target="_blank" class="text-[#EE9B00] hover:text-[#CA6702]">GitHub Link</a></p>
-                    <p class="text-slate-600 text-sm">A security tool built in **Core Java** focused on hiding data within image metadata (**EXIF Steganography**), showcasing low-level data manipulation and security principles.</p>
+                    <p class="text-slate-600 text-sm">A security tool built in <strong>Core Java</strong> focused on hiding data within image metadata (<strong>EXIF Steganography</strong>), showcasing low-level data manipulation and security principles.</p>
                 </div>
+
                 <div class="bg-white rounded-xl shadow-lg p-6 project-card-border" style="border-left-color: #AE2012;">
-                    <h4 class="text-lg font-semibold text-[#005F73]">6. DeepVoice - Voice Analysis Library 🎤</h4>
+                    <h4 class="text-lg font-semibold text-[#005F73]">DeepVoice - Voice Analysis Library 🎤</h4>
                     <p class="text-sm font-medium text-[#0A9396] mb-2">Technologies: Python, AI/ML, Signal Processing | <a href="https://github.com/codesapienbe/DeepVoice" target="_blank" class="text-[#EE9B00] hover:text-[#CA6702]">GitHub Link</a></p>
                     <p class="text-slate-600 text-sm">A comprehensive <strong>Python library</strong> for voice analysis, processing, and <strong>speaker identification</strong>, reinforcing active interest and competency in the AI/ML domain.</p>
                 </div>
@@ -748,7 +741,7 @@
 
     const experiencePoints = [
         { keyword: 'concurrent users', context: 'Supported 10k+ concurrent users in high-performance Spring Boot apps (Freelance).' },
-        { keyword: 'CI/CD', context: 'Orchestrated CI/CD pipelines with Docker and Terraform (Freelance).' },
+        { keyword: 'CI/CD', context: 'Orchestrated CI/CD pipelines with Docker and Terraform (Freelance & University).' },
         { keyword: 'financial messaging', context: 'Maintained mission-critical financial messaging systems (SWIFT AMH).' },
         { keyword: 'security', context: 'Executed security upgrades using cryptographic standards (SWIFT).' },
         { keyword: 'testing', context: 'Implemented robust automated testing strategies (TheMatchBox).' },
@@ -756,7 +749,7 @@
         { keyword: 'ZeroMQ', context: 'Used ZeroMQ for inter-service communication to reduce latency (TheMatchBox).' },
         { keyword: 'C#', context: 'Developed C# desktop applications with MSSQL database integration (VKODIT).' },
         { keyword: 'Python AI', context: 'Developed Python AI/Computer Vision systems with TensorFlow (Freelance AI).' },
-        { keyword: 'starter', context: 'Developed Spring Boot Starter frameworks (Spring Vision, Finqube).' },
+        { keyword: 'starter', context: 'Developed Spring Boot Starter frameworks (Spring Vision).' },
         { keyword: 'MQ', context: 'Experienced with IBM MQ and other messaging protocols (SWIFT).' }
     ];
 
@@ -1236,8 +1229,9 @@
             ],
             projects: [
                 { name: "Spring Vision Framework", tech: "Spring Boot, Java, OpenCV", desc: "Production-ready computer vision framework as a Spring Boot Starter." },
-                { name: "Spring Finqube ISO 20022 Starter", tech: "Spring Boot, Financial Integration", desc: "Spring Boot starter for ISO 20022 financial messaging with secure defaults." },
                 { name: "Instyper - Voice-to-Text Desktop App", tech: "Java, Vosk, Whisper", desc: "Privacy-first offline voice transcription desktop app." },
+                { name: "Stegnocchi - EXIF Steganography App", tech: "Core Java, Image Processing", desc: "Security tool for hiding data in EXIF metadata and image-based steganography." },
+                { name: "DeepVoice - Voice Analysis Library", tech: "Python, AI/ML, Signal Processing", desc: "Voice analysis and speaker identification library for research and production." },
             ],
             education: [
                 { title: "Postgraduate AI & Machine Learning", institution: "Erasmushogeschool Brussel" },
